syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.product";

package grpc.product.discount;

message DiscountRequest {
  string product_id = 1;
  string user_id = 2;
}

message DiscountResponse {
  float pct = 1;
  int64 value_in_cents = 2;
}

service DiscountService {
  rpc Calculate (DiscountRequest) returns (DiscountResponse) {
  };
}

